# ecommerce

./: .env  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3d614ddf5974_.py
app/: database.py  database_mental_model.md  main.py
app/core/: config.py  dependencies.py  security.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/routers/: auth.py  cart.py  orders.py  products.py
app/schemas/: cart.py  order.py  product.py  user.py
app/services/: auth.py
